res/examples/valid/stmt_assign_let_with_type_and_value_of_identifier.eg
let a: number = 123;
let b: number = a;

a + b;