res/examples/invalid/unknown_type_not_allowed_in_decl.eg
let b: unknown = 123;

// out: TypeError: unknown type e.g. let a: unknown; or let a;